[project]
name = "qubindr"
version = "0.1.0"
description = "a qubind implementation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "qiskit-ibm-runtime>=0.39.0",
    "qiskit>=2.0.2",
    "dotenv>=0.9.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
      packages = ["src"]
